--- a/src/main/resources/templates/views/camp/admin/campsite/write.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/write.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script th:src="@{/js/write.js}"></script>
@@ -14,6 +15,7 @@
 
 <body>
 <th:block th:insert="~{common/header::header}"></th:block>
+<div class="container mt-3">
 <h2 id = wh2>구역 등록</h2>
 <div id = write>
     <div id = wimage>
@@ -56,6 +58,6 @@
         </form>
     </div>
 </div>
-
+</div>
 </body>
 </html>
