--- a/src/main/resources/templates/views/qna/comment.html
+++ b/src/main/resources/templates/views/qna/comment.html
@@ -12,7 +12,8 @@
         <div class="mb-3 mt-3">
             <label>댓글: <span id="cmt_cnt"></span> 개</label>
 
-            <div class="input-group my-2" sec:authorize="isAuthenticated()">
+            <!-- ROLE_MEMBER 권한 가진 사용자만 댓글 작성 가능 -->
+            <div class="input-group my-2">
                 <input type="text" class="form-control" id="input_comment">
                 <button type="button" class="btn btn-outline-primary" id="btn_comment">작성</button>
             </div>
