--- a/src/main/resources/templates/views/qna/list.html
+++ b/src/main/resources/templates/views/qna/list.html
@@ -99,7 +99,7 @@
 
     <div class="row">
         <div class="col-12">
-            <a class="btn btn-outline-dark" th:href="@{/qna/write}" sec:authorize="isAuthenticated()">작성</a>
+            <a class="btn btn-outline-dark" th:href="@{/qna/write}">작성</a>
         </div>
     </div>
 </div>
