--- a/src/main/resources/templates/views/camp/admin/campsite/detail.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/detail.html
@@ -15,7 +15,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-        <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/leisure/common.css}">
 
         <script th:src="@{/js/detail.js}"></script>
     </head>
