--- a/src/main/resources/templates/views/camp/list.html
+++ b/src/main/resources/templates/views/camp/list.html
@@ -42,6 +42,22 @@
             </div>
         </div>
     </form>
+    <div class="mb-3 mt-3 clearfix">
+        <span class="float-start me-2">총 [[${cnt}]]개</span>
+        <span class="float-start">page [[${page}]]/[[${totalPage}]]</span>
+        <span class="float-end">
+            <form name="frmPageRows">
+                <input type="hidden" name="page" th:value="${page}">
+                <select class="form-select" name="pageRows">
+                    <option value="10" th:selected="${pageRows==10}">10</option>
+                    <option value="15" th:selected="${pageRows==15}">15</option>
+                    <option value="20" th:selected="${pageRows==20}">20</option>
+                    <option value="50" th:selected="${pageRows==50}">50</option>
+                </select>
+            </form>
+        </span>
+    </div>
+    <!-- 페이징 헤더 -->
 
 
     <hr>
@@ -65,6 +81,9 @@
 </div>
 </th:block>
 
+<!-- pagination -->
+<th:block th:insert="~{camp/pagination::pagination}"></th:block>
+<!-- pagination -->
     <!-- 목록 -->
 </div>
 </body>
