--- a/src/main/resources/templates/views/camp/admin/camping/write.html
+++ b/src/main/resources/templates/views/camp/admin/camping/write.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script th:src="@{/js/write.js}"></script>
@@ -22,44 +23,44 @@
             <div class="col-12 text-danger" th:text="${error }">
                 <!--/* 에러메세지 */-->
             </div>
+        </div>
+
+
+        <form th:action="@{/camp/admin/camping/write}" method="post" enctype="Multipart/form-data">
+
+            <input type="hidden" class="form-control" id="user" placeholder="user" name="user" th:value="${user}">
+
+            <div class = write>
+                <label for="camp_name">캠핑장 이름:</label>
+                <input type="text" class="form-control" id="camp_name" placeholder="캠핑장명" name="camp_name" th:value="${camp_name}" required>
+            </div>
+
+            <div class = write>
+                <label for="content">소개:</label>
+                <input type="text" class="form-control" id="content" placeholder="소개" name="content" th:value="${content}" required>
+            </div>
+            <div>도시 선택</div>
+            <div class = write>
+                <select name="cityId" id="city" class="form-select">
+                    <option value="null" selected>도시</option>
+                    <th:block th:each="city : ${cityList}">
+                        <option th:value="${city.id}" th:text="${city.city}"></option>
+                    </th:block>
+                </select>
+            </div>
+
+            <div class = write>
+                <label for="address">주소:</label>
+                <input type="text" class="form-control" id="address" placeholder="상세 주소" name="address" th:value="${address}" required>
+            </div>
+
+
+            <div id = wbutton>
+                <button type="submit" class="btn btn-outline-dark">등록완료</button>
+                <a class="btn btn-outline-dark" th:href="@{/camp/admin/camping/list}">목록</a>
+            </div>
+        </form>
     </div>
-
-
-    <form th:action="@{/camp/admin/camping/write}" method="post" enctype="Multipart/form-data">
-
-        <input type="hidden" class="form-control" id="user" placeholder="user" name="user" th:value="${user}">
-
-        <div class = write>
-            <label for="camp_name">캠핑장 이름:</label>
-            <input type="text" class="form-control" id="camp_name" placeholder="캠핑장명" name="camp_name" th:value="${camp_name}" required>
-        </div>
-
-        <div class = write>
-            <label for="content">소개:</label>
-            <input type="text" class="form-control" id="content" placeholder="소개" name="content" th:value="${content}" required>
-        </div>
-        <div>도시 선택</div>
-        <div class = write>
-            <select name="cityId" id="city" class="form-select">
-                <option value="null" selected>도시</option>
-                <th:block th:each="city : ${cityList}">
-                    <option th:value="${city.id}" th:text="${city.city}"></option>
-                </th:block>
-            </select>
-        </div>
-
-        <div class = write>
-            <label for="address">주소:</label>
-            <input type="text" class="form-control" id="address" placeholder="상세 주소" name="address" th:value="${address}" required>
-        </div>
-
-
-        <div id = wbutton>
-            <button type="submit" class="btn btn-outline-dark">등록완료</button>
-            <a class="btn btn-outline-dark" th:href="@{/camp/admin/camping/list}">목록</a>
-        </div>
-    </form>
-</div>
 </div>
 
 
