--- a/src/main/resources/templates/views/camp/admin/campsite/detail.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/detail.html
@@ -15,7 +15,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-        <link rel="stylesheet" type="text/css" th:href="@{/css/leisure/common.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
 
         <script th:src="@{/js/detail.js}"></script>
     </head>
@@ -30,10 +30,10 @@
                 <input type="hidden" name="id" th:value="${dto.id}">
             </form>
 
-        <div id = detail>
-            <div th:if="${dto.fileList != null and dto.fileList.size() > 0}">
-                <img th:src="@{'/upload/camp/' + ${dto.fileList[0].file}}" style="width:150px; height:150px;" class="card-img-top" alt="campImage">
-            </div>
+            <div id = detail>
+                <div th:if="${dto.fileList != null and dto.fileList.size() > 0}">
+                    <img th:src="@{'/upload/camp/' + ${dto.fileList[0].file}}" style="width:150px; height:150px;" class="card-img-top" alt="campImage">
+                </div>
                 <div class=detail>
                     <label>구역 번호:</label>
                     <div class="border bg-light rounded p-2" >[[${dto.number}]]</div>
@@ -55,7 +55,7 @@
 
                 <!-- 하단 링크 -->
 
-        </div>
+            </div>
         </section>
     </div>
     </body>
