--- a/src/main/resources/templates/views/camp/admin/campsite/write.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/write.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script th:src="@{/js/write.js}"></script>
@@ -14,48 +15,49 @@
 
 <body>
 <th:block th:insert="~{common/header::header}"></th:block>
-<h2 id = wh2>구역 등록</h2>
-<div id = write>
-    <div id = wimage>
+<div class="container mt-3">
+    <h2 id = wh2>구역 등록</h2>
+    <div id = write>
+        <div id = wimage>
 
-        <div class="row mt-5" th:if="${error }">
-            <div class="col-12 text-danger" th:text="${error }">
-                <!--/* 에러메세지 */-->
+            <div class="row mt-5" th:if="${error }">
+                <div class="col-12 text-danger" th:text="${error }">
+                    <!--/* 에러메세지 */-->
+                </div>
             </div>
+
+
+            <form th:action="@{/camp/admin/campsite/write}" method="post" enctype="Multipart/form-data">
+                <label>첨부파일:</label>
+                <div id="files">
+
+                </div>
+                <button type="button" id="btnAdd" class="btn btn-secondary">추가</button>
+
+                <input type="hidden" class="form-control" id="camping" placeholder="캠핑 id" name="camping" th:value="${camping}" >
+                <div class = write>
+                    <label for="number">구역 번호:</label>
+                    <input type="text" class="form-control" id="number" placeholder="구역 번호" name="number" th:value="${number}" required>
+                </div>
+
+                <div class = write>
+                    <label for="content">소개:</label>
+                    <input type="text" class="form-control" id="content" placeholder="소개" name="content" th:value="${content}" required>
+                </div>
+
+                <div class = write>
+                    <label for="price">가격:</label>
+                    <input type="text" class="form-control" id="price" placeholder="가격" name="price" th:value="${price}" required>
+                </div>
+
+
+                <div id = wbutton>
+                    <button type="submit" class="btn btn-outline-dark">등록완료</button>
+                    <button type="button" class="btn btn-outline-dark" onclick="history.back()">돌아가기</button>
+                </div>
+            </form>
         </div>
-
-
-        <form th:action="@{/camp/admin/campsite/write}" method="post" enctype="Multipart/form-data">
-            <label>첨부파일:</label>
-            <div id="files">
-
-            </div>
-            <button type="button" id="btnAdd" class="btn btn-secondary">추가</button>
-
-            <input type="hidden" class="form-control" id="camping" placeholder="캠핑 id" name="camping" th:value="${camping}" >
-            <div class = write>
-                <label for="number">구역 번호:</label>
-                <input type="text" class="form-control" id="number" placeholder="구역 번호" name="number" th:value="${number}" required>
-            </div>
-
-            <div class = write>
-                <label for="content">소개:</label>
-                <input type="text" class="form-control" id="content" placeholder="소개" name="content" th:value="${content}" required>
-            </div>
-
-            <div class = write>
-                <label for="price">가격:</label>
-                <input type="text" class="form-control" id="price" placeholder="가격" name="price" th:value="${price}" required>
-            </div>
-
-
-            <div id = wbutton>
-                <button type="submit" class="btn btn-outline-dark">등록완료</button>
-                <button type="button" class="btn btn-outline-dark" onclick="history.back()">돌아가기</button>
-            </div>
-        </form>
     </div>
 </div>
-
 </body>
 </html>
