--- a/src/main/resources/templates/views/qna/list.html
+++ b/src/main/resources/templates/views/qna/list.html
@@ -20,23 +20,23 @@
 
 <style>
     #t_admin{
-    color: Crimson;
-    border-left-style: dashed;
-    border-left-width: 3px;
-    border-left-color: tomato;
-    border-right-style: dashed;
-    border-right-width: 3px;
-    border-right-color: tomato;
+        color: Crimson;
+        border-left-style: dashed;
+        border-left-width: 3px;
+        border-left-color: tomato;
+        border-right-style: dashed;
+        border-right-width: 3px;
+        border-right-color: tomato;
     }
     #thead{
-    border-bottom-style:dashed;
-    border-bottom-width:3px;
-    border-bottom-color: tomato;
+        border-bottom-style:dashed;
+        border-bottom-width:3px;
+        border-bottom-color: tomato;
     }
     #t_blank{
-    border-bottom-style:dashed;
-    border-bottom-width:3px;
-    border-bottom-color: tomato;
+        border-bottom-style:dashed;
+        border-bottom-width:3px;
+        border-bottom-color: tomato;
     }
 </style>
 
@@ -99,7 +99,7 @@
 
     <div class="row">
         <div class="col-12">
-            <a class="btn btn-outline-dark" th:href="@{/qna/write}">작성</a>
+            <a class="btn btn-outline-dark" th:href="@{/qna/write}" sec:authorize="isAuthenticated()">작성</a>
         </div>
     </div>
 </div>
