--- a/src/main/resources/templates/views/user/login.html
+++ b/src/main/resources/templates/views/user/login.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!--    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js"></script>-->
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <!--  <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>-->
+  <script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js" charset="utf-8"></script>
+  <!--  <script th:src="@{/js/naverLogin.js}"></script>-->
   <script th:src="@{/js/kakaoLogin.js}"></script>
   <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
@@ -22,16 +25,7 @@
 <section class="conA">
   <div class="conB">
     <h1 class="easyLogin"><b>간편로그인</b></h1>
-    <div class="apiLogin">
-      <form id="kakaoform" th:action="@{/user/apiLogin}" method="POST"></form>
-      <div onclick="loginWithKakao();" style="display:inline; padding-top: 10px;">
-        <a href="javascript:void(0)">
-          <img th:src="@{/img/kakao.png}">
-        </a>
-      </div>
-      <img th:src="@{/img/google.png}" style="display:inline; padding-top: 10px; padding-left: 50px; padding-right: 50px;">
-      <img th:src="@{/img/naver.png}" style="display:inline; padding-top: 10px;">
-    </div>
+    <th:block th:insert="~{common/apiLogin::api}"></th:block>
     <form th:action="@{/user/login}" method="POST">
       <hr>
       <div class="row mt-5">
@@ -43,7 +37,7 @@
         <input type="text" class="form-control" name="username" id="username" th:value="${username}" placeholder="ID" required>
         <label for="username">ID</label>
       </div>
-      <div class="form-floating mt-1">
+      <div class="form-floating mt-2">
         <input type="password" class="form-control" name="password" id="password" value="" placeholder="Password" required>
         <label for="password">Password</label>
       </div>
