Coupon, alert문 변경

--- a/src/main/resources/templates/views/camp/admin/camping/writeOK.html
+++ b/src/main/resources/templates/views/camp/admin/camping/writeOK.html
@@ -5,7 +5,7 @@
      history.back();
   </script>
 <script th:if="${result > 0}" th:inline="javascript">
-     alert("등록 성공");
+     alert("구역 등록 성공");
      location.href = "list";
   </script>
 </html>
