file 이미지 크기

--- a/src/main/resources/templates/views/lender/admin/itemUpdate.html
+++ b/src/main/resources/templates/views/lender/admin/itemUpdate.html
@@ -55,7 +55,7 @@
                             <button type="button" id="btnAdd" class="btn btn-secondary">추가</button>
                             <!--/* 이미지인 경우 보여주기 */-->
                             <div th:each="fileDto : ${item.fileList}" th:if="${fileDto.file}">
-                                <img th:src="@{'/upload/item/' + ${fileDto.file}}" class="img-thumbnail" alt="Cinque Terre">
+                                <img th:src="@{'/upload/item/' + ${fileDto.file}}" style="width:150px; height:150px;" class="img-thumbnail" alt="Cinque Terre">
                             </div>
                         </div>
                     </div>
