--- a/src/main/resources/templates/views/lender/itemList.html
+++ b/src/main/resources/templates/views/lender/itemList.html
@@ -51,7 +51,7 @@
       <th:block th:each="item : ${itemList}">
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img th:src="@{'/upload/item/' + ${item.fileList[0].file}}" class="card-img-top" alt="Item Image">
+            <img th:src="@{'/upload/item/' + ${item.fileList[0].file}}" style="width:150px; height:150px;" class="card-img-top" alt="Item Image">
             <div class="card-body">
               <h5 class="card-title" th:text="${item.itemName}"></h5>
               <p class="card-text" th:text="${item.content}"></p>
