--- a/src/main/resources/templates/views/lender/itemRent.html
+++ b/src/main/resources/templates/views/lender/itemRent.html
@@ -147,7 +147,7 @@
     }
 
     let sdate = $.datepicker.formatDate("yy-mm-dd", $("#sdate").datepicker("getDate"));
-    let edate = $.datepicker.formatDate("yy-mm-dd", $("#sdate").datepicker("getDate"));
+    let edate = $.datepicker.formatDate("yy-mm-dd", $("#edate").datepicker("getDate"));
     document.querySelector("#sdateInput").value = sdate;
     document.querySelector("#edateInput").value = edate;
 
