1. UserController api url 변경 2. recipt, write.html 수정

--- a/src/main/resources/templates/views/camp/recipt.html
+++ b/src/main/resources/templates/views/camp/recipt.html
@@ -40,7 +40,7 @@
             </div>
             <div class=detail>
                 <label>주소:</label>
-                <div class="border bg-light rounded p-2" >[[${dto.campsite.camping.city}]][[${dto.campsite.camping.address}]]</div>
+                <div class="border bg-light rounded p-2" >[[${dto.campsite.camping.city.city}]] [[${dto.campsite.camping.address}]]</div>
             </div>
             <div class=detail>
                 <label>예약자 명:</label>
