--- a/src/main/resources/templates/views/camp/admin/camping/write.html
+++ b/src/main/resources/templates/views/camp/admin/camping/write.html
@@ -15,6 +15,7 @@
 
 <body>
 <th:block th:insert="~{common/header::header}"></th:block>
+<div class="container mt-3">
 
 <h2 id = wh2>캠핑장 등록</h2>
 <div id = write>
@@ -64,5 +65,6 @@
 </div>
 
 
+</div>
 </body>
 </html>
