--- a/src/main/resources/templates/views/lender/itemList.html
+++ b/src/main/resources/templates/views/lender/itemList.html
@@ -51,7 +51,9 @@
       <th:block th:each="item : ${itemList}">
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img th:src="@{'/upload/item/' + ${item.fileList[0].file}}" style="width:150px; height:150px;" class="card-img-top" alt="Item Image">
+            <div th:if="${item.fileList != null and item.fileList.size() > 0}">
+              <img th:src="@{'/upload/item/' + ${item.fileList[0].file}}" style="width:150px; height:150px;" class="card-img-top" alt="Item Image">
+            </div>
             <div class="card-body">
               <h5 class="card-title" th:text="${item.itemName}"></h5>
               <p class="card-text" th:text="${item.content}"></p>
